# csvpeek

./: .gitignore  .mise.toml  Cargo.toml  LICENSE  README.md  mise.toml  test_data.csv
.github/workflows/: ci.yml  release.yml
docs/: csvpeek_project_summary.md  csvpeek_spec.md  features.md  project_review.md
src/: cli.rs  csv_reader.rs  error.rs  filter.rs  guide.rs  main.rs  output.rs  progress.rs  schema.rs  stats.rs  types.rs
tests/: integration_tests.rs
tests/fixtures/: basic.csv  mixed_types.csv  no_header.csv  single_row.csv  special_chars.csv  tab_separated.tsv  with_nulls.csv
