[package]
name = "csvpeek"
version = "0.1.0"
edition = "2024"
description = "Fast CSV insights from the command line"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/csvpeek"
keywords = ["csv", "cli", "data", "summary", "statistics"]
categories = ["command-line-utilities", "parsing"]

[[bin]]
name = "csvp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
comfy-table = "7"
regex = "1"
