[package]
name = "csvpeek"
version = "0.1.0"
edition = "2024"
description = "Fast CSV insights from the command line"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tact-software/csvpeek"
keywords = ["csv", "cli", "data", "summary", "statistics"]
categories = ["command-line-utilities", "parsing"]

[[bin]]
name = "csvp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
comfy-table = "7"
regex = "1"
indicatif = "0.17"
colored = "3"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
chardetng = "0.1"
rayon = "1.10"
